--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Xinyuan Hu/胡心缘 # your name (or website title) here
+logo: "/images/生活照_胡心缘.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Graduate Student in Social Policy + Data Analytics Program @ University of Pennsylvania/宾夕法尼亚大学社会政策与数据分析项目理学硕士
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="linkedin.com/in/xinyuan-hu-1a92171b8">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
