--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 胡心缘(Xinyuan Hu)  # your name (or website title) here
-logo: "/images/生活照_胡心缘.jpeg?raw=true" # your photo (or logo) here
+logo: "/images/logo.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   MSSD Graduate Student 
